# governed-broker-framework

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DATA.md  LICENSE  README.md  README_zh.md  agent_initial_profiles.csv  analysis_summary.json  analyze_agent_prompts.py  analyze_baseline_cumulative.py  analyze_single_agent_refined.py  analyze_traces_quick.py  analyze_yearly_behavior.py  compare_all_models.py  compare_baseline_framework.py  debug_audit_snapshot.txt  debug_output.txt  debug_output_2.txt  debug_prompt_context.py  debug_read_zh.py  example_llm_prompts.txt  flood_adaptation_simulation_log.csv  flood_years.csv  full_report.txt  generate_architecture_v17_final.py  log_paths.txt  monitor_experiment.ps1  orchestrate_benchmark.py  plot_benchmark.py  pyproject.toml  requirements.txt  results_audit_check.txt  run_all_benchmarks.ps1  run_all_models.ps1  run_master_batch.ps1  run_new_memory_experiment.ps1  run_v3_2_full_suite.ps1  (+22 more)
.ai/: NEXT_TASK.md  PROJECT_STATE.md  SESSION_LOG.md
.tasks/: CHANGELOG.md  DeepSeek_Optimization_Plan.md  GUIDE.md  JOH_Analysis_Report.md  README.md  SDK_Handover_Plan.md  Task-015F_GlobalConfig.md  ai-ide-summary.md  artifacts-index.json  cozy-roaming-perlis.md  registry.json  skills-mcp.md
agents/: __init__.py  base_agent.py  institutional_base.py  loader.py
analysis/: llama_results.txt  llama_results_utf8.txt
broker/: __init__.py  agent_config.py  agent_types.yaml  async_adapter.py  audit_writer.py  context_builder.py  data_loader.py  engine.py  experiment.py  generic_context_builder.py  interaction_hub.py  memory.py  memory_engine.py  model_adapter.py  plugins.py  prompt_templates_narrative.yaml  replay.py  skill_broker_engine.py  skill_registry.py  skill_types.py  social_graph.py  types.py
cognitive_governance/: README.md  __init__.py  demo_sdk_usage.py
config/: loader.py  providers.yaml
doc/: Scientific_Assistant_Manual.md
docs/: EXTENSIBILITY_ROADMAP.md  GRAPHITI_MCP_SETUP.md  adaptivity_evaluation.md  agent_pipeline_specification.md  api_reference.md  architecture.md  exp3_multi_agent_design.md  flood-smoke-validation-20260209.md  generate_architecture_diagram.py  governance_sdk_whitepaper.md  government_agent_spec.md  institutional_agent_behavior_spec.md  insurance_agent_spec.md  integration_guide.md  joh_references.bib  literature_requirements_pmt.md  memory_rag_design.md  memory_retrieval_specification.md  memory_system.md  memory_system_design.md  multi_agent_constructs.md  pr3_behaviors_design.md  sdk_design_specs.md  validator_design_readme.md  wrr-ch2-review-plan-v6.md  wrr-ch3-review-plan-v6.md  wrr-ch4-review-plan-v6.md  wrr-intro-wagf-v6-plan.md  wrr-metric-calculation-spec-v6.md  wrr-preflight-report-v6.md  wrr-results-archive-manifest-v6.md  wrr-results-table-design-v6.md  wrr-run23-test-plan-v6.md  wrr_clean_metrics_report_v1.md  wrr_clean_metrics_report_v2.md  wrr_gemma3_4b_rr_event_audit_v2.csv  wrr_intro_theory_examples_patch_v7.md  wrr_metrics_all_models_v6.csv  wrr_metrics_clean_all_v1.csv  wrr_metrics_clean_all_v2.csv  (+17 more)
examples/: README.md  README_zh.md  __init__.py  run_toy.py  run_v6_full_pipeline.ps1
governed_ai_sdk/: README.md  demo_sdk_usage.py
hooks/: hooks.json  run_ai_patch.js
interfaces/: __init__.py  action_request_interface.py  execution_interface.py  llm_provider.py  read_interface.py
paper/: PAPER_README.md  SAGE_WRR_Paper_v13.docx  SAGE_WRR_Paper_v6.docx  SAGE_WRR_Paper_v7.docx  SAGE_WRR_Paper_v8.docx  SAGE_WRR_Paper_v9.docx  outline.tex  references.bib
providers/: __init__.py  factory.py  gemini.py  llm_provider.py  ollama.py  openai_provider.py  rate_limiter.py
ref/: ABM_SM_Wenyu_V1.docx  ABM_Summary_extracted.txt  ABM_draft_Wenyu_V1.docx  Hung2021_extracted.txt  LLMABMPMT-Final.py  agent_initial_profiles.csv.bak  example_llm_prompts.txt  (+2 more)
(+5175 files in other folders)
